<?xml version="1.0" encoding="utf-8"?><!--strings.xml-->
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="drawer_open" tools:ignore="MissingTranslation">Open navigation drawer</string>
    <string name="drawer_close" tools:ignore="MissingTranslation">Close navigation drawer</string>
    <string name="app_name" tools:ignore="MissingTranslation">Android Final Project</string>
    <string name="sunrise_sunset_lookup" tools:ignore="MissingTranslation">Sunrise &amp; Sunset Lookup</string>
    <string name="recipe_search" tools:ignore="MissingTranslation">Recipe Search</string>
    <string name="dictionary" tools:ignore="MissingTranslation">Dictionary</string>
    <string name="song_search" tools:ignore="MissingTranslation">Song Search App</string>

    <!-- Harmeet values start -->
    <string name="delete_confirmation_title" tools:ignore="MissingTranslation">Confirm Deletion</string>
    <string name="delete_confirmation_message" tools:ignore="MissingTranslation">Do you want to delete this song?</string>
    <string name="yes" tools:ignore="MissingTranslation">Yes</string>
    <string name="no" tools:ignore="MissingTranslation">No</string>
    <string name="song_deleted" tools:ignore="MissingTranslation">Song deleted</string>
    <string name="undo" tools:ignore="MissingTranslation">Undo</string>
    <string name="undo_clicked" tools:ignore="MissingTranslation">Undo clicked</string>
    <string name="help_dialog_title" tools:ignore="MissingTranslation">How to use App</string>


    <string name="help_dialog_message_line1" tools:ignore="MissingTranslation">To use the application:</string>
    <string name="help_dialog_message_line2" tools:ignore="MissingTranslation">1. Search for artists:</string>
    <string name="help_dialog_message_line3" tools:ignore="MissingTranslation">- Enter the artist\'s name in the search field.</string>
    <string name="help_dialog_message_line4" tools:ignore="MissingTranslation">- Click the search button.</string>
    <string name="help_dialog_message_line5" tools:ignore="MissingTranslation">2. View artist\'s songs:</string>
    <string name="help_dialog_message_line6" tools:ignore="MissingTranslation">- Click on the artist from the search results.</string>
    <string name="help_dialog_message_line7" tools:ignore="MissingTranslation">- The list of songs will be displayed.</string>
    <string name="help_dialog_message_line8" tools:ignore="MissingTranslation">3. View song details:</string>
    <string name="help_dialog_message_line9" tools:ignore="MissingTranslation">- Click on a song from the list.</string>
    <string name="help_dialog_message_line10" tools:ignore="MissingTranslation">- Details such as title, duration, album name, and album cover will be shown.</string>
    <string name="help_dialog_message_line11" tools:ignore="MissingTranslation">4. Save a song to favorites:</string>
    <string name="help_dialog_message_line12" tools:ignore="MissingTranslation">- On the song details page, click the "Save to Favorites" button.</string>
    <string name="help_dialog_message_line13" tools:ignore="MissingTranslation">5. View favorite songs:</string>
    <string name="help_dialog_message_line14" tools:ignore="MissingTranslation">- Click on the favorites button to see the list of saved songs.</string>
    <string name="help_dialog_message_line15" tools:ignore="MissingTranslation">- Select a song to view its details.</string>
    <string name="help_dialog_message_line16" tools:ignore="MissingTranslation">- Use the delete button to remove a song from favorites.</string>
    <string name="help_dialog_message_line17" tools:ignore="MissingTranslation">6. Search history:</string>
    <string name="help_dialog_message_line18" tools:ignore="MissingTranslation">- The application saves your search term.</string>
    <string name="help_dialog_message_line19" tools:ignore="MissingTranslation">- The previous search term will be displayed in the search field on startup.</string>

    <string name="hello_blank_fragment" tools:ignore="MissingTranslation">Blank Fragment</string>
    <string name="album" tools:ignore="MissingTranslation">Album</string>
    <string name="album_title" tools:ignore="MissingTranslation">Album Title</string>
    <string name="song_title" tools:ignore="MissingTranslation">Song Title</string>
    <string name="duration" tools:ignore="MissingTranslation">Duration</string>
    <string name="album_name" tools:ignore="MissingTranslation">Album Name</string>
    <string name="delete" tools:ignore="MissingTranslation">Delete</string>
    <string name="track" tools:ignore="MissingTranslation">Track</string>
    <string name="save_to_favorites" tools:ignore="MissingTranslation">Save to favorites</string>
    <string name="enter_artist_name" tools:ignore="MissingTranslation">Enter artist name</string>
    <string name="search" tools:ignore="MissingTranslation">Search</string>
    <string name="view_favorites" tools:ignore="MissingTranslation">View Favorites</string>
    <string name="track_label" tools:ignore="MissingTranslation">"Track: "</string>
    <string name="duration_label" tools:ignore="MissingTranslation">"Duration: "</string>
    <string name="album_label" tools:ignore="MissingTranslation">"Album: "</string>
    <string name="enter_artist_name_and_press_search" tools:ignore="MissingTranslation">Enter artist name and press search</string>
    <string name="please_select_an_app_from_the_toolbar" tools:ignore="MissingTranslation">Please select an app from the toolbar</string>
    <string name="song_restored" tools:ignore="MissingTranslation">The song has been restored</string>


    <!-- Harmeet values end -->


    <!--  Iuliia  -->
    <string name="saved_word_text" tools:ignore="MissingTranslation">SavedWordTextView</string>
    <string name="saved_word_placeholder" tools:ignore="MissingTranslation">Saved Word</string>
    <string name="io_search" tools:ignore="MissingTranslation">Search</string>
    <string name="enter_word_hint" tools:ignore="MissingTranslation">Enter a word</string>
    <string name="view_saved_words" tools:ignore="MissingTranslation">View Saved Words</string>
    <string name="flContent" tools:ignore="MissingTranslation">flContent</string>
    <string name="saved_word_detail_placeholder" tools:ignore="MissingTranslation">Saved Word Detail Placeholder</string>
    <string name="saved_definition" tools:ignore="MissingTranslation">Saved Definition</string>
    <string name="delete_definition" tools:ignore="MissingTranslation">Delete Definition</string>
    <string name="word" tools:ignore="MissingTranslation">Word</string>
    <string name="word_text_view" tools:ignore="MissingTranslation">WordTextView</string>
    <string name="word_detail_placeholder" tools:ignore="MissingTranslation">Word Detail Placeholder</string>
    <string name="definition" tools:ignore="MissingTranslation">Definition</string>
    <!--  Iuliia  -->

</resources>
